--- a/user_tools/Makefile
+++ b/user_tools/Makefile
@@ -1,6 +1,6 @@
 obj+=vm_eraser_detect
 
 all:
-	gcc -g -Wall vm_eraser_detect.c -lvirt -o vm_eraser_detect -I /usr/include/libxml2/ -lxml2
+	gcc -g -Wall vm_eraser_detect.c -lvirt -o vm_eraser_detect -I /usr/include/libxml2/ -lxml2 -lpthread
 clean:
 	rm -rf *.o
